# Stow

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json
backend/: appState.js  appState.test.js  archiveEntryModel.js  archiveFs.js  archiveMetadata.js  archiveMutationTransaction.js  archiveMutationTransaction.test.js  archiveNamePolicy.js  archiveNamePolicy.test.js  archivePathSafety.js  archiveQueryIndex.js  archiveQueryIndex.test.js  archiveService.js  archiveService.test.js  atomicFile.js  atomicFile.test.js  benchmarks.js  catalogStore.js  catalogStore.test.js  chunker.js  chunker.test.js  clipClassifier.js  crypto.js  crypto.test.js  daemon.cjs  daemon.integration.test.js  daemon.test.js  distilledClassifier.js  distilledClassifier.test.js  mediaTools.js  mediaTools.test.js  metadataStore.js  metadataStore.test.js  objectStore.js  objectStore.test.js  optimizationPlanner.js  policies.js  previewCache.js  resnetBackbone.js  tooling.js  (+4 more)
src/: App.tsx  index.css  main.tsx  tauriBridge.ts  types.ts  upscaleRoutes.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: prepare-node-runtime.cjs  prepare-node-runtime.test.js
src-tauri/src/: main.rs
training/upscale-classifier/: README.md  benchmark-samples.json  benchmarkClip.js  benchmarkDistilled.js  curateDataset.js  datasetUtils.js  datasetUtils.test.js  distill-corpus.json  labeled-train.json  pruneCache.js  sampleUtils.js  sources.json  train-samples.json  trainDistilledModel.js  trainDistilledModel.test.js  (+1 more)
(+9 files in other folders)
